@@ -1,3 +1,14 @@
+2003-01-02  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3136473.  <object>s with no specified size should be
+	0x0.  They should not be 300x200.  Fixes thinker.org.
+	
+        Reviewed by john and darin.
+
+        * khtml/rendering/render_frames.cpp:
+        (RenderPart::intrinsicWidth):
+        (RenderPart::intrinsicHeight):
+
 2003-01-02  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej and Trey.
